# SmearingProjectCUORE

./: .gitignore  Bkg_FindGammaRatesInLab_Din_vz1.ipynb  Cs137_GaussFitting_ForMax-Copy1.ipynb  Cs137_GaussFitting_ForResolution_Din_vz1.ipynb  FindDeadtime.ipynb  FittingTest_TMinuit_Din_vz0.ipynb  Gamma_Normalization_Din_vz1.ipynb  ImportData_LabAndSimulation_Din_WIP.py  MuonPeakCalibration_Din_ThanksEmily_v1_cut.ipynb  MuonPeakCalibration_Din_ThanksEmily_vz1_cut.ipynb  Muon_Normalization_Din_vz0.ipynb  OLD_MuonsAndGammas_SimulationFitting_Din_v2_w_Caesium.ipynb  Part2_SmearingProject_Combo_Din_vz0.ipynb  README.md  RunPythonScript_vz0.ipynb  SemaringProject_MuonsAndGammaSim_Din_vz4.ipynb  SemaringProject_MuonsAndGammaSim_Din_vz5.ipynb  SemaringProject_MuonsAndGammaSim_ForPresentation_Din_vz3.ipynb  SemaringProject_MuonsAndGammaSim_MoreFreqs_Din_vz2.ipynb  SemaringProject_MuonsAndGammaSim_New_Din_vz1.ipynb  aaaaaa.ipynb  array_sub.py  fitting-test.py  fraction-fitter.py  gamma_normalization_vz1i.py  gamma_normalize.py  normalize_gammas_vz1.py  plotSpectra-QA-Copy1.ipynb  plotSpectra.ipynb  readDataAndFit-AndrewUpdate-Copy1.ipynb  test.ipynb
muons_rebuild/: ActionInitialization.cc  ActionInitialization.hh  Analysis.hh  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh  muons_rebuild.cc
muons_rebuild/muons_rebuild-build/: Makefile  Muon_Background_PleaseWork_ImBeggingYou.ipynb  (+2 more)
(+121 files in other folders)
